[gd_scene load_steps=13 format=3 uid="uid://klts52bc3exe"]

[ext_resource type="Texture2D" uid="uid://bm2k102hr7l15" path="res://assets/background.png" id="1_j6arj"]
[ext_resource type="Script" uid="uid://dk8enqjdeb3r4" path="res://scripts/configs/botoesConfig.gd" id="1_w7iws"]
[ext_resource type="Texture2D" uid="uid://b1u1celrxklxs" path="res://assets/config/Retangulo_Opaco.png" id="3_bl5ny"]
[ext_resource type="AudioStream" uid="uid://dkkhlhxm08ta2" path="res://assets/game/button-click.mp3" id="3_m5bkl"]
[ext_resource type="Texture2D" uid="uid://dpduir8dbxkk7" path="res://assets/config/Voltar.png" id="3_sccdn"]
[ext_resource type="FontFile" uid="uid://dghd7xtaj5ayp" path="res://assets/musicas e fontes/Gilroy-Bold.ttf" id="5_0tuuy"]
[ext_resource type="Texture2D" uid="uid://dap2csy3ys3yk" path="res://assets/config/BotaoOff.png" id="5_ayfbt"]
[ext_resource type="Texture2D" uid="uid://rfeqigdscj1d" path="res://assets/config/BotaoOn.png" id="6_jrev4"]
[ext_resource type="Script" uid="uid://de5dpldi4eoft" path="res://scripts/configs/controleVida.gd" id="7_me3g6"]
[ext_resource type="Texture2D" uid="uid://cp1vqk14mrjlb" path="res://assets/config/BotaoQuantidade.png" id="8_evu5t"]
[ext_resource type="Script" uid="uid://b3kjq3ryg47k1" path="res://scripts/configs/controleTempoAjuda.gd" id="11_vbxg0"]
[ext_resource type="Script" uid="uid://c6rgevw67q1qu" path="res://scripts/configs/controleTema.gd" id="12_d33r4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w7iws")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -68.0
offset_top = -11.0
offset_right = 1233.0
offset_bottom = 721.0
texture = ExtResource("1_j6arj")
expand_mode = 1

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_m5bkl")
volume_db = -10.0

[node name="FundoTexto" type="Sprite2D" parent="."]
position = Vector2(576, 332)
scale = Vector2(0.451765, 0.45)
texture = ExtResource("3_bl5ny")

[node name="Voltar" type="Button" parent="."]
clip_contents = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_left = 30.0
offset_top = 558.0
offset_right = 550.0
offset_bottom = 1078.0
scale = Vector2(0.15, 0.15)
focus_mode = 0
action_mode = 0
icon = ExtResource("3_sccdn")
flat = true
icon_alignment = 1

[node name="LabelPontuação" type="Label" parent="."]
layout_mode = 0
offset_left = 226.0
offset_top = 423.0
offset_right = 593.0
offset_bottom = 540.0
scale = Vector2(0.825069, 0.825069)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_0tuuy")
theme_override_font_sizes/font_size = 56
text = "Pontuação
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pontuação" type="TextureButton" parent="."]
custom_minimum_size = Vector2(290, 90)
layout_mode = 0
offset_left = 700.0
offset_top = 404.0
offset_right = 990.0
offset_bottom = 494.0
scale = Vector2(0.907576, 0.907576)
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("5_ayfbt")
texture_pressed = ExtResource("6_jrev4")
ignore_texture_size = true
stretch_mode = 0

[node name="LabelTemporizador" type="Label" parent="."]
layout_mode = 0
offset_left = 226.0
offset_top = 523.0
offset_right = 593.0
offset_bottom = 603.0
scale = Vector2(0.825069, 0.825069)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_0tuuy")
theme_override_font_sizes/font_size = 56
text = "Temporizador"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Temporizador" type="TextureButton" parent="."]
custom_minimum_size = Vector2(290, 90)
layout_mode = 0
offset_left = 700.0
offset_top = 513.0
offset_right = 990.0
offset_bottom = 603.0
scale = Vector2(0.907576, 0.907576)
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("5_ayfbt")
texture_pressed = ExtResource("6_jrev4")
ignore_texture_size = true
stretch_mode = 0

[node name="LabelVidas" type="Label" parent="."]
layout_mode = 0
offset_left = 226.0
offset_top = 293.0
offset_right = 594.0
offset_bottom = 373.0
scale = Vector2(0.825069, 0.825069)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_0tuuy")
theme_override_font_sizes/font_size = 56
text = "Total de Vidas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelTempoAjuda" type="Label" parent="."]
layout_mode = 0
offset_left = 194.0
offset_top = 181.0
offset_right = 634.0
offset_bottom = 261.0
scale = Vector2(0.825069, 0.825069)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_0tuuy")
theme_override_font_sizes/font_size = 56
text = "Tempo Para Dica"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelTema" type="Label" parent="."]
layout_mode = 0
offset_left = 194.0
offset_top = 75.0
offset_right = 634.0
offset_bottom = 155.0
scale = Vector2(0.825069, 0.825069)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_0tuuy")
theme_override_font_sizes/font_size = 56
text = "Tema"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControleVidas" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_me3g6")

[node name="BotaoVidas" type="Sprite2D" parent="ControleVidas"]
position = Vector2(800, 333)
scale = Vector2(0.412535, 0.412535)
texture = ExtResource("8_evu5t")

[node name="AumentarVidas" type="Button" parent="ControleVidas"]
layout_mode = 0
offset_left = 852.0
offset_top = 287.0
offset_right = 951.0
offset_bottom = 380.0
scale = Vector2(0.825069, 0.825069)
flat = true

[node name="DiminuirVidas" type="Button" parent="ControleVidas"]
layout_mode = 0
offset_left = 654.0
offset_top = 287.0
offset_right = 753.0
offset_bottom = 379.0
scale = Vector2(0.825069, 0.825069)
flat = true

[node name="Vidas" type="Label" parent="ControleVidas"]
layout_mode = 0
offset_left = 765.0
offset_top = 313.0
offset_right = 844.0
offset_bottom = 355.0
scale = Vector2(0.825069, 0.825069)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
ellipsis_char = ""

[node name="ControleTempoAjuda" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("11_vbxg0")

[node name="BotaoTempoAjuda" type="Sprite2D" parent="ControleTempoAjuda"]
position = Vector2(800, 221)
scale = Vector2(0.412535, 0.412535)
texture = ExtResource("8_evu5t")

[node name="AumentarTempoAjuda" type="Button" parent="ControleTempoAjuda"]
layout_mode = 0
offset_left = 852.0
offset_top = 175.0
offset_right = 951.0
offset_bottom = 268.0
scale = Vector2(0.825069, 0.825069)
flat = true

[node name="DiminuirTempoAjuda" type="Button" parent="ControleTempoAjuda"]
layout_mode = 0
offset_left = 654.0
offset_top = 175.0
offset_right = 753.0
offset_bottom = 267.0
scale = Vector2(0.825069, 0.825069)
flat = true

[node name="TempoAjuda" type="Label" parent="ControleTempoAjuda"]
layout_mode = 0
offset_left = 765.0
offset_top = 201.0
offset_right = 844.0
offset_bottom = 243.0
scale = Vector2(0.825069, 0.825069)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
ellipsis_char = ""

[node name="ControleTema" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("12_d33r4")

[node name="BotaoTema" type="Sprite2D" parent="ControleTema"]
position = Vector2(800, 110)
scale = Vector2(0.412535, 0.412535)
texture = ExtResource("8_evu5t")

[node name="DireitaTema" type="Button" parent="ControleTema"]
layout_mode = 0
offset_left = 852.0
offset_top = 64.0
offset_right = 951.0
offset_bottom = 157.0
scale = Vector2(0.825069, 0.825069)
flat = true

[node name="EsquerdaTema" type="Button" parent="ControleTema"]
layout_mode = 0
offset_left = 654.0
offset_top = 64.0
offset_right = 753.0
offset_bottom = 156.0
scale = Vector2(0.825069, 0.825069)
flat = true

[node name="Tema" type="Label" parent="ControleTema"]
layout_mode = 0
offset_left = 765.0
offset_top = 90.0
offset_right = 844.0
offset_bottom = 132.0
scale = Vector2(0.825069, 0.825069)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
ellipsis_char = ""

[connection signal="pressed" from="Voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="Pontuação" to="ControleVidas" method="_on_pontuação_pressed"]
[connection signal="toggled" from="Temporizador" to="." method="_on_temporizador_toggled"]
